Bug 167661 - Bullet font lost on RTF export
Summary: Bullet font lost on RTF export
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.2.0 target:25.8.1
Keywords: filter:rtf
Depends on:
Blocks: RTF-Bullet-Number-Lists
  Show dependency treegraph
 
Reported: 2025-07-24 07:37 UTC by Mike Kaganski
Modified: 2025-08-11 10:12 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
A simple bullet list using Wingdings (536 bytes, application/msword)
2025-07-24 07:37 UTC, Mike Kaganski
Details
UTC L2/12-368 of 2012-11-06 (3.98 MB, application/pdf)
2025-07-24 11:51 UTC, V Stuart Foote
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2025-07-24 07:37:31 UTC
Created attachment 201970 [details]
A simple bullet list using Wingdings

Open the attachment. It uses a list with level 1 bullet U+F0A7 using font Wingdings (a filled square). (It shows on Windows, where the font is installed by default; it may need the font installations on other systems.)

Save it as RTF, and reopen.
=> the bullet turns into a large empty "placeholder" rectangle.

Inspect the generated RTF code. There is a \listlevel definition with \u-3929 (\u61607 before a fix for bug 167660), having a font reference \fN, where N is an integer; but the font table section {\fonttbl...} does not contain respective \fN.
Comment 1 Mike Kaganski 2025-07-24 10:52:35 UTC
https://gerrit.libreoffice.org/c/core/+/188277
Comment 2 V Stuart Foote 2025-07-24 11:51:41 UTC
Created attachment 201972 [details]
UTC L2/12-368 of 2012-11-06

@Mike, but should we do anything tracking a glyph pulled from Unicode PUA for a font?  When font is not on system it is exposed as an invalid glyph to use, at least for LibreOffice handling as an ODF compliant document. 

Are we somehow obliged to support non-Unicode compliant glyphs taken from PUA?

Unicode JTC did specific Wingdings/Webdings/Wingdings2/Wingdings3 ID mappings [1], but not the PUA of each font.

The PUA U+F0A7 was assigned to U+25AA BLACK SMALL SQUARE

=-ref-=
[1] atttached, https://escholarship.org/content/qt8mq4c4qt/qt8mq4c4qt.pdf
Comment 3 Commit Notification 2025-07-24 14:56:06 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/12d7102c119a1e2e393be7ea1ba30ffb245d638b

tdf#167661: collect bullet fonts before exporting font table

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Mike Kaganski 2025-07-24 15:28:18 UTC
(In reply to V Stuart Foote from comment #2)

That is 100% irrelevant. The loss of the font is unrelated to the range of the code. In my fix, in the unit test, I used U+00B7. It behaved the same way.
Comment 5 Commit Notification 2025-08-11 10:12:42 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/66a612ee153e64afd5fe7024555be960e56c0a89

tdf#167661: collect bullet fonts before exporting font table

It will be available in 25.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.