sw/source/filter/ww8/wrtww8.cxx
@@ -3465,7 +3465,7 @@ ErrCode MSWordExportBase::ExportDocument( bool bWriteAll )
     // fix the SwPositions in m_aFrames after SetRedlineFlags
     UpdateFramePositions(m_aFrames);
 
-    m_aFontHelper.InitFontTable(m_rDoc);
+    m_aFontHelper.InitFontTable(*this);
     GatherChapterFields();
 
     CollectOutlineBookmarks(m_rDoc);
